--- a/example_output/ResNet-50-224X224.ipynb
+++ b/example_output/ResNet-50-224X224.ipynb
@@ -787,8 +787,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Split the dataset into train and test sets\n",
-    "# train_data, temp_data = train_test_split(original_df, test_size=0.2)\n",
-    "train_data, temp_data = train_test_split(original_df, test_size=0.2, random_state=42)"
+    "train_data, temp_data = train_test_split(original_df, test_size=0.2)\n",
+    "# train_data, temp_data = train_test_split(original_df, test_size=0.2, random_state=42)"
    ]
   },
   {
@@ -984,8 +984,8 @@
    "outputs": [],
    "source": [
     "# Split the train set into train and validation sets\n",
-    "# val_data, test_data = train_test_split(temp_data, test_size=1/2)\n",
-    "val_data, test_data = train_test_split(temp_data, test_size=1/2, random_state=42)\n",
+    "val_data, test_data = train_test_split(temp_data, test_size=1/2)\n",
+    "# val_data, test_data = train_test_split(temp_data, test_size=1/2, random_state=42)\n",
     "\n",
     "# Create datasets and dataloaders for train, validation, and test sets\n",
     "train_dataset_ = CustomDataset(train_data_augmented, transform=transform_)\n",
